# whisper-transcribe-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: publish.yml
whisper_transcribe/: server.py
