[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-transcribe-mcp"
version = "1.1.0"
description = "MCP server for audio transcription via faster-whisper (local) or OpenAI Whisper API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "whisper", "transcription", "audio", "ai", "speech-to-text"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastmcp>=3.0",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]
openai = ["openai>=1.0"]
all = ["faster-whisper>=1.0", "openai>=1.0"]

[project.scripts]
whisper-transcribe-mcp = "whisper_transcribe.server:main"

[project.urls]
Repository = "https://github.com/ZahiriNatZuke/whisper-transcribe-mcp"

[tool.hatch.build.targets.wheel]
packages = ["whisper_transcribe"]
